--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -18,3 +18,12 @@ jobs:
       with:
         username: heitordarela
         password: ${{ secrets.DOCKERHUB_PASS }}
+        
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v4.0.0
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: heitordarela/go_ci
+        
